// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`child.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
<!-- Not print correctly -->
>>> bar
>>> ===

>>> bar
> ===

- in list
    - in list
      heading
      =======
    - in list
      >>> heading
      > =======

=====================================output=====================================
<!-- Not print correctly -->

> > > bar
>>> ===

> > > bar ===

- in list
  - in list
      heading
      =======
  - in list
    > > > heading > =======

================================================================================
`;

exports[`definition-before.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
<!-- https://spec.commonmark.org/0.31.2/#example-215 -->
[foo]: /url1
[foo]: /url2
bar
===

[foo]: /url1
[foo]: /url2

bar
===

=====================================output=====================================
<!-- https://spec.commonmark.org/0.31.2/#example-215 -->

[foo]: /url1
[foo]: /url2
bar
===

[foo]: /url1
[foo]: /url2

bar
===

================================================================================
`;

exports[`issue-6013.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
Setext Heading 1
================

Setext Heading 2
----------------

## ATX Heading 2

=====================================output=====================================
Setext Heading 1
================

Setext Heading 2
----------------

## ATX Heading 2

================================================================================
`;

exports[`issue-6013-2.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
Heading
[![Shields.io badge](https://img.shields.io/badge/Shields.io-badge-brightgreen)](https://shields.io)
=======

=====================================output=====================================
Heading
[![Shields.io badge](https://img.shields.io/badge/Shields.io-badge-brightgreen)](https://shields.io)
=======

================================================================================
`;

exports[`setext.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
h1
===

h2
---

=====================================output=====================================
h1
===

h2
---

================================================================================
`;

exports[`snippet: #0 - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
Multi\\
Line  
Setext\\
Heading
=======

Multi\\
Line  
Setext\\
Heading
-------
=====================================output=====================================
Multi\\
Line  
Setext\\
Heading
=======

Multi\\
Line  
Setext\\
Heading
-------

================================================================================
`;

exports[`snippet: #1 - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[foo]: /url{" "}
  bar
===
=====================================output=====================================
[foo]: /url{" "}
  bar
===

================================================================================
`;
